# CENG3548-2024--Web-Mining

./: Ahmet_Yusuf_Alan_CENG3548_2024_Web_Mining.ipynb  README.md  main.py  product_info_map.json  pyproject.toml
