[tool.poetry]
name = "llm-poet"
version = "0.1.0"
description = "generate llm train data"
authors = ["alan <cs.ahmetyusufalan@gmail.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
